kotlin-parser/src/test/semlang/validatorTests/fail/naturalLiteral6.sem
function myStuff.myFunction(): Natural {
  Natural."0x1337"
}
